css/style.css
html, body{
    font-size: 100%;
	background:	#000;
	font-family: 'Open Sans', sans-serif !important;
}
p{
	margin:0;
}
ul,label{
	margin:0;
	padding:0;
}
body a:hover{
	text-decoration:none;
}
/* Class Schedule Table Style */
table {
    display: table;
    border-collapse: separate;
    border-spacing: 2px;
    border-color: grey;
    font-family: 'Comfortaa', cursive;
    width: 100%;
    height: 400px;
}
table.table1{
    font-size: 13px;
    font-weight: bold;
    line-height: 1.4em;
    font-style: normal;
    border-collapse:separate;
    text-align: center;
}
.table1 thead th{
    padding:15px;
    text-align: center;
    color:black;
    background:#666;
    -webkit-border-top-left-radius:5px;
    -webkit-border-top-right-radius:5px;
    -moz-border-radius:5px 5px 0px 0px;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
}
.table1 thead th:empty{
    background:transparent;
    border:none;
}
.table1 tbody th{
    color:black;
   	background:#666;
    -moz-border-radius:5px 0px 0px 5px;
    -webkit-border-top-left-radius:5px;
    -webkit-border-bottom-left-radius:5px;
    border-top-left-radius:5px;
    border-bottom-left-radius:5px;
    font-family: 'Comfortaa', cursive;
    text-align: center;
    width: 10%;
}
.table1 tfoot td{
    color: #9CD009;
    font-size:32px;
    text-align:center;
}
.table1 tfoot th{
    color:#666;
}
.table1 tbody td{
    text-align:center;
    background-color:rgba(255, 255, 255, 0.75);
    -moz-border-radius:2px;
    -webkit-border-radius:2px;
    border-radius:2px;
    color:#666;
}

.show_schedule {
	width: 90%;
	height: 400px;
	margin-left: 5%;
}

/* Class Schedule Table Style End*/


.title {
	width: 80%;
	height: 100px;
	margin-left: 10%;
	margin-top: 5%;
	font-family: 'Comfortaa', cursive;
	font-size:200%;
}
.mode{
	border-radius: 170px;
    box-shadow: 0px 0px 5px #272727;
    padding: 1em 1em 0 1em;
    position: relative;
    min-height: 250px;
	transition:.5s all;
	-webkit-transition:.5s all;
	-moz-transition:.5s all;
	-o-transition:.5s all;
	-ms-transition:.5s all;
}
.show_modes div.mode{
  border: 2px outset white;
}
.show_modes:hover div.mode{
    background-color: rgba(255, 255, 255, 0.75);
    transition: 0.5s all ease;
    -webkit-transition: 0.5s all ease;
    -moz-transition: 0.5s all ease;
    -o-transition: 0.5s all ease;
    -ms-transition: 0.5s all ease;	
}
.show_modes:hover div.mode p{
    color:#333;
    transition: 0.5s all ease;
    -webkit-transition: 0.5s all ease;
    -moz-transition: 0.5s all ease;
    -o-transition: 0.5s all ease;
    -ms-transition: 0.5s all ease;	
}
.mode:hover{
	box-shadow: 0px 0px 5px #864a0d;
}
.mode:hover div.icons{
	background:#666;
}
.mode h4{
	text-transform:capitalize;
	font-size:1.3em;
	color:#864a0d;
	font-family: 'Comfortaa', cursive;
	margin:2.5em 0 1em;
	text-align:center;
}
.mode p{
	margin:0;
	color:#666;
	font-size:14px;
	text-align:center;
	line-height:1.8em;
}
.icons{
	width:70px;
	height:70px;
	background:#cbb6a1;
	margin:0 auto;
	border-radius:60px;
	-webkit-border-radius:60px;
	-moz-border-radius:60px;
	-o-border-radius:60px;
	-ms-border-radius:60px;
	position:absolute;
	top: -10%;
    left: 37%;
}
.icons span{
	color: #000;
    font-size: 1.3em;
    left: 1.1em;
    top: 1em;
}
.show_modess{
	margin-top: 5%;
	margin-left: 5%;
	width: 90%;
}



/*-- //to-top --*/
/*-----start-responsive-design------*/


@media (max-width: 1024px){

	.welcome {
		padding: 12em 0 5em;
	}
	.welcome h3, .services h3, .services1 h3, .advantages h3, .history-left h3, .history-right h3, .gallery h3, .contact h3, .newsletter-info h3 {
		font-size: 1.8em;
	}
	.show_modess {
		margin-top: 20%;
	}
	.mode h4 {
		font-size: 1.1em;
		margin: 2.5em 0 0.4em;
	}
    .mode {
		min-height: 205px;
	}
	.icons {
		top: -20%;
		left: 35%;
	}
	.icons span {
		left: 1.1em;
		top: 1.1em;
	}
	
}
@media (max-width:768px){

	.show_modes {
		float: left;
		margin: 0 0 0 3em !important;
		width: 40%;
	}
	.show_modes:nth-child(1),.show_modes:nth-child(2){
		margin: 0 auto 4em 3em !important;
	}
	.mode {
		min-height: 250px;
	}
	.mode h4 {
		margin: 3.5em 0 0.4em;
	}
}

@media (max-width:640px){

	.icons {
		width: 56px;
		height: 56px;
	}
	.mode h4 {
		margin: 2.5em 0 0.4em;
	}
	.mode {
		min-height: 208px;
	}
	.icons span {
		left: 0.8em;
		top: 0.8em;
	}
	.icons {
		top: -14%;
		left: 38%;
	}
	
	.show_modes:nth-child(1), .show_modes:nth-child(2) {
		margin: 0 auto 4em 2.5em !important;
	}
	.show_modes {
		margin: 0 0 0 2.5em !important;
	}
}
@media (max-width:480px){

	.show_modes:nth-child(1), .show_modes:nth-child(2) {
		margin: 0 auto 4em 0em !important;
		width: 50%;
	}
	.mode h4 {
		margin: 1.5em 0 0.4em;
	}
	.mode {
		min-height: 190px;
	}
	.show_modes {
		margin: 0 !important;
		width: 50%;
	}
	
}

@media (max-width:320px){
	
	.show_modes {
		float: none;
		width:83% !important;
		margin: 0 auto 3em 1em !important;
	}
	.show_modes:nth-child(1), .show_modes:nth-child(2) {
		margin: 0 auto 3em 1em !important;
		width: 50%;
	}
	.show_modes:nth-child(4) {
		margin: 0 auto 0em 1em !important;
	}
	.mode h4 {
		margin: 1.8em 0 0.4em;
	}
	.show_modess {
		margin: 3em 0 0;
	}
	
}
/*-- header --*/
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
    color: #fff;
    background:none;
}
.navbar-nav {
    float: right;
	font-family: 'Comfortaa', cursive;
}
.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border: none;
    background: none;
}
.navbar-default {
    border: none;
    background: none;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
	color:#bfbcad;
	background:#2dcc70;
}
.header {
    background-color:#34495e;
}
.navbar-default .navbar-nav > li > a {
    color: #fff;
	font-size: 15px;
}
.navbar {
    margin-bottom: 0;
}
/*-- //header --*/

/*-- about --*/
.advantages{
	background-size:cover;
	-webkit-background-size:cover;
	-moz-background-size:cover;
	-o-background-size:cover;
	-ms-background-size:cover;
	min-height:600px;
	padding:4em 0;
}
.advantages h3{
	color:#bfbcad;
	margin-left: 10%;
	font-family: 'Comfortaa', cursive;
	font-size: 200%;
}
.our-advantages-grids:nth-child(2){
	margin:3em 0;
}

.our-advantages-grids:nth-child(4){
	margin:3em 0;
}
.our-advantages-grd-left p{
	padding: 13px 15px;
	text-align: center;
	color: #bfbcad;
	font-size: 21px;
	margin: 0;
	border-radius: 160px;
	background:#34495e;
	font-family: 'Comfortaa', cursive;
}
.our-advantages-grd-right{
	padding:0 !important;
}
.our-advantages-grd-right h4{
	font-size:1.5em;
	color:#bfbcad;
	margin:0 0 1em;
	font-family: 'Comfortaa', cursive;
}
.our-advantages-grd-right p{
	color:#bfbcad;
	font-size:14px;
	margin:0;
	line-height: 1.8em;
}
p.aut{
	color:#999;
	font-size:14px;
	margin:0;
	line-height:1.8em;
	padding: 0;
}

